Add function searching videos or users
